remove spin, pointer event on hidden events

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -50,7 +50,7 @@
                                         </path>
                                     </svg>
 
-                                    <span class="main-icon event-hide-icon fa-spin event-hide-icon--true"></span>
+                                    <span class="event-hide-icon event-hide-icon--true"></span>
                                 </div>
                             {{/if}}
                             <div class="event-card__time">
