add event information

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -28,6 +28,8 @@
             </li>
 
             <li>Medium posts can be proxed to remove any JS and cookies</li>
+
+            <li>Show events (only dev.by currently), logged in user can manually hide the viewed events</li>
         </ul>
 
 
