--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -4,14 +4,16 @@
   --font-color: #424242;
   --bg-color: #fff;
   --heading-color: #292922;
-  --font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   --colomn-width: 650px;
+  --font-transition: 0.2s;
 }
 
 [data-theme='dark'] {
   --primary-color: rgb(31, 35, 39);
   --secondary-color: rgb(34, 39, 43);
   --font-color: rgb(95, 95, 95);
+  --font-hover-color: rgba(255, 255, 255, 0.7);
   --bg-color: #161625;
   --heading-color: #818cab;
 }
@@ -19,9 +21,10 @@
 body {
   margin: 0;
 
-  font-family: var(--font);
+  font-family: var(--font-family);
   font-size: 14px;
   line-height: 1.42857143;
+  font-weight: 400;
 
   background-color: rgb(23, 28, 32);
   color: #333;
