--- a/client/src/components/ThemeSelector/theme-selector.modules.css
+++ b/client/src/components/ThemeSelector/theme-selector.modules.css
@@ -1,2 +1,54 @@
 .theme-selector {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
+.theme-selector__label {
+  display: block;
+  width: 50px;
+  height: 25px;
+
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.theme-selector input {
+  position: absolute;
+}
+
+.theme-selector__round {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+
+  background-color: var(--primary-color);
+}
+
+.theme-selector__round:after {
+  position: absolute;
+  content: '';
+
+  height: 25px;
+  width: 25px;
+
+  top: 0;
+  transform: translateX(0);
+
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+
+  transition: var(--default-transition);
+}
+
+.theme-selector input:checked + .theme-selector__round:after {
+  top: 0;
+  transform: translateX(100%);
 }
