--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -1,19 +1,24 @@
 :root {
   --primary-color: #302ae6;
   --secondary-color: #536390;
-  --font-color: #424242;
+  --font-primary-color: rgba(255, 255, 255, 0.7);
+  --font-secondary-color: #424242;
+  --link-primary-color: #337ab7;
+
   --bg-color: #fff;
   --heading-color: #292922;
-  --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --colomn-width: 650px;
+  --font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+  --column-width: 650px;
   --default-transition: 0.2s;
 }
 
 [data-theme='dark'] {
   --primary-color: rgb(31, 35, 39);
   --secondary-color: rgb(34, 39, 43);
-  --font-color: rgb(95, 95, 95);
-  --font-hover-color: rgba(255, 255, 255, 0.7);
+  --font-primary-color: rgba(255, 255, 255, 0.7);
+  --font-secondary-color: rgb(95, 95, 95);
+  --link-primary-color: #337ab7;
+
   --bg-color: #161625;
   --heading-color: #818cab;
 }
@@ -28,4 +33,16 @@ body {
 
   background-color: rgb(23, 28, 32);
   color: #333;
+}
+
+.main-content {
+  width: var(--column-width);
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.link {
+  color: var(--link-primary-color);
+  text-decoration: none;
 }
