--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
 
-  background-color: rgb(31, 35, 39);
+  background-color: var(--primary-color);
 }
 
 .header__container {
