--- a/client/src/components/FeedFilter/feedFilter.module.css
+++ b/client/src/components/FeedFilter/feedFilter.module.css
@@ -1,18 +1,25 @@
 .feedFilter {
-    font-size: 20px;
     text-align: center;
+    font-size: 20px;
+}
+
+.feedFilter ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+
+    list-style-type: none;
+}
+
+.feedFilter ul li:not(:last-child){
+    padding-right: 5px;
 }
 
 .feedFilter__link {
     text-decoration: none;
     color: var(--font-primary-color);
-    transition: var(--default-transition);
-
-    padding-right: 5px;
-}
-
-.feedFilter__link:last-of-type {
-    padding-right: 0;
+    transition: var(--default-transition);   
 }
 
 .feedFilter__link:hover {
