--- a/client/src/components/News/news.module.css
+++ b/client/src/components/News/news.module.css
@@ -12,8 +12,8 @@
 }
 
 .newsItem__icon {
-    display: inline-flex;
-    margin-bottom: auto;
+    display: inline;
+    vertical-align: middle;
 }
 
 .newsItem__header {
@@ -23,14 +23,16 @@
 .newsItem__arrow {
     padding-left: 5px;
     padding-right: 5px;
+    display: inline;
+    vertical-align: top;
 }
 
 .newsItem__title {
-    display: flex;
     margin: 0;
 
     line-height: 1.1;
     font-weight: 400;
+    font-size: 18px;
 }
 .newsItem__link {
     text-decoration: none;
@@ -40,4 +42,17 @@
 
 .newsItem__link:hover {
     color: var(--font-primary-color); 
+}
+.newsItem__tags {
+    margin: 10px 0;
+}
+
+.newsItem__footer {
+    display: flex;
+    align-items: center;
+}
+
+.newsItem__favorite {
+    width: 16px;
+    height: 16px;
 }
