--- a/client/src/components/Navigation/navigation.module.css
+++ b/client/src/components/Navigation/navigation.module.css
@@ -10,10 +10,18 @@
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
+
+  list-style-type: none;
 }
 
 .navigation__item {
-  list-style-type: none;
+  display: flex;
+}
+
+.navigation__item span {
+  padding-right: 7px;
+
+  color: var(--font-header-secondary-color);
 }
 
 .navigation__title {
