add timstamp to opened, viewed posts, add posts stat

--- a/server/views/update.hbs
+++ b/server/views/update.hbs
@@ -9,6 +9,9 @@
     </style>
 </head>
 <body>
+
+{{> header (object user=user url=url) }}
+
 <div class="update-container">
     <b>Update</b><br><br>
     <form method="POST" action="/update">
